# tick-trader

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Project_Scope.md  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/a_strategies/examples/data_test_strategy/: Cargo.toml
crates/a_strategies/examples/data_test_strategy/src/: main.rs
crates/a_strategies/examples/live_accounts_examples/data_test_strategy/: Cargo.toml
crates/a_strategies/examples/live_accounts_examples/data_test_strategy/src/: main.rs
crates/a_strategies/examples/live_accounts_examples/live_orders/: Cargo.toml
crates/a_strategies/examples/live_accounts_examples/live_orders/src/: main.rs
crates/a_strategies/examples/orderbook_scalper/: Cargo.toml
crates/a_strategies/examples/orderbook_scalper/src/: main.rs
crates/a_strategies/examples/orders_test_strategy/: Cargo.toml
crates/a_strategies/examples/orders_test_strategy/src/: main.rs
crates/a_strategies/historical_examples/historical_data_test_strategy/: Cargo.toml
crates/a_strategies/historical_examples/historical_data_test_strategy/src/: main.rs
crates/a_strategies/historical_examples/orders_test_strategy/: Cargo.toml
crates/a_strategies/historical_examples/orders_test_strategy/src/: main.rs
crates/a_strategies/live_accounts_examples/data_test_strategy/: Cargo.toml
crates/a_strategies/live_accounts_examples/data_test_strategy/src/: main.rs
crates/a_strategies/live_accounts_examples/live_orders/: Cargo.toml
crates/a_strategies/my_strategies/orderbook_scalper/: Cargo.toml
crates/adapters/projectx/: Cargo.toml
crates/adapters/projectx/src/: client.rs  factory.rs  lib.rs
crates/adapters/projectx/src/common/: consts.rs  mod.rs
crates/adapters/projectx/src/data/: mod.rs
crates/adapters/projectx/src/execution/: mod.rs
crates/adapters/projectx/src/http/: base_client.rs  client.rs  credentials.rs  endpoints.rs  error.rs  inner_client.rs  mod.rs  models.rs
crates/adapters/projectx/src/websocket/: base_client.rs  client.rs  mod.rs  models.rs
crates/adapters/projectx/tests/: account_search.rs  build.rs  client.rs  contract_available.rs  contract_search.rs  contract_search_by_id.rs  credentials.rs  market_hours_more_tests.rs  market_hours_tests.rs  order_cancel.rs  order_modify.rs  order_search.rs  order_search_open.rs  overview.rs  place_order.rs  position_close.rs  position_partial_close.rs  position_search_open.rs  retrieve_bars.rs  trade_search.rs
crates/bus/: Cargo.toml
crates/bus/src/: client.rs  lib.rs  metrics.rs  router.rs
crates/database/: Cargo.toml
crates/database/src/: append.rs  catalog.rs  duck.rs  duck_queries.rs  helpers.rs  ingest.rs  init.rs  layout.rs  lib.rs  merge.rs  models.rs  parquet.rs  paths.rs  perist.rs  queries.rs  replay.rs  schema.rs  schema.sql  update_historical.rs
crates/database/tests/: db_catalog_tests.rs  db_tests.rs  persist_ingest_tests.rs  replay_tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: backtest_execution.rs  backtest_feeder.rs  client.rs  default_models.rs  engine.rs  engine_inner.rs  handle.rs  helpers.rs  lib.rs  models.rs  portfolio.rs  runtime.rs  traits.rs
crates/engine/src/backtest/: backtest_clock.rs  backtest_execution.rs  backtest_feeder.rs  default_models.rs  init.rs  mod.rs  models.rs  orchestrator.rs
crates/engine/src/backtest/realism_models/: mod.rs  traits.rs
crates/engine/src/backtest/realism_models/project_x/: calander.rs  fee.rs  fill.rs  latency.rs  mod.rs  risk.rs  slippage.rs
crates/engine/src/statics/: bus.rs  clock.rs  consolidators.rs  core.rs  mod.rs  order_modify.rs  order_placement.rs  portfolio.rs  subscriptions.rs
crates/engine/tests/: backtest_feeder_test.rs  backtest_init_test.rs  handle_tests.rs  portfolio_integration_tests.rs
crates/provider/: Cargo.toml
crates/provider/src/: lib.rs  traits.rs
crates/providers/: Cargo.toml
crates/providers/src/: download_manager.rs  ipc.rs  lib.rs  manager.rs  worker.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: db_service.rs  db_service_pg.rs  main.rs
crates/shm/: Cargo.toml
crates/shm/src/: lib.rs
crates/tt-types/: Cargo.toml
crates/tt-types/src/: base_data.rs  consolidators.rs  futures_helpers.rs  keys.rs  lib.rs  orders.rs  providers.rs  rkyv_types.rs  root_specs.rs  wire.rs
crates/tt-types/src/accounts/: account.rs  actor.rs  events.rs  mod.rs  order.rs  position.rs
crates/tt-types/src/api_helpers/: mod.rs  rate_limiter.rs  retry_manager.rs
crates/tt-types/src/order_models/: enums.rs  mod.rs
crates/tt-types/src/rate_limits/: mod.rs  quota.rs  rate_limiter.rs
crates/tt-types/src/reality_models/: models.rs  traits.rs
crates/tt-types/src/reality_models/inbuilt/: defaults.rs
crates/tt-types/src/securities/: futures_helpers.rs  market_hours.rs  mod.rs  registry.rs  security.rs  symbols.rs
crates/tt-types/tests/: consolidators_tests.rs  market_hours_more_tests.rs  market_hours_tests.rs  rkyv_types.rs
crates/types/: Cargo.toml
crates/types/src/: base_data.rs  consolidators.rs  engine_id.rs  engine_tag.rs  guid.rs  history.rs  keys.rs  lib.rs  providers.rs  rkyv_types.rs  rolling_window.rs  serde_ext.rs  wire.rs
crates/types/src/accounts/: account.rs  actor.rs  events.rs  mod.rs  order.rs  position.rs
crates/types/src/data/: core.rs  mbp1.rs  mbp10.rs  mod.rs  models.rs
crates/types/src/order_models/: mod.rs
crates/types/src/reality_models/: mod.rs
crates/types/src/securities/: futures_helpers.rs  market_hours.rs  mod.rs  registry.rs  security.rs  symbols.rs
crates/types/src/securities/hours/: market_hours.rs  mod.rs
crates/types/src/server_side/: mod.rs  rate_limiter.rs  retry_manager.rs  traits.rs
crates/types/tests/: consolidators_tests.rs  market_hours_more_tests.rs  market_hours_tests.rs  rkyv_types.rs
docs/: README.md  SHM-layout.md  WIRE-v1.md  advanced.md  architecture.md  auto-update.md  backtesting.md  database.md  strategies.md
pg/: .env.example  docker-compose.yml
pg/init/: 01-init.sh
(+2 files in other folders)
