[workspace]
members = [
    "crates/bus",
    "crates/provider",
    "crates/engine",
    "crates/types",
    "crates/adapters/projectx",
    "crates/server",
    "crates/providers",
    "crates/shm"
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
ahash = "0.8.12"
async-stream = "0.3.6"
async-trait = "0.1.89"
dotenvy = "0.15.7"
chrono = { version = "0.4.42", features = ["clock", "std", "serde",] }
chrono-tz = "0.10.4"
bytes = "1.10.1"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "test-util", "signal"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
once_cell = "1.21.3"
strum_macros = "0.27.2"
serde = {version = "1.0.228", features = ["derive"]}
rust_decimal = { version = "1.38.0", features = ["serde", "default", "macros"] }
rstest = "0.26.1"
ustr = "1.1.0"
rkyv = { version = "0.8.12", features = ["std", "alloc", "bytecheck"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
zeroize = { version = "1.8.2", features = ["derive"] }
dashmap = "7.0.0-rc2"
futures-util = "0.3.28"
indexmap = "2.11.1"
log = "0.4.28"
reqwest = { version = "0.12.23"}
rust_decimal_macros = "1.38.0"
serde_json = "1.0.145"
lazy_static = "1.5.0"
rustls = { version = "0.23.20", default-features = false, features = ["ring"] }
