[workspace]
members = [
    "crates/bus",
    "crates/engine",
    "crates/types",
    "crates/adapters/projectx",
    "crates/server",
    "crates/providers",
    "crates/shm",
    "crates/database"
,   "crates/a_strategies/examples/data_test_strategy"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"


[workspace.dependencies]
anyhow = "1.0.100"
ahash = "0.8.12"
async-trait = "0.1.89"
dotenvy = "0.15.7"
dotenv = "0.15.0"
bytecheck = "0.6"
chrono = { version = "0.4.42", features = ["clock", "std", "rkyv", "rkyv-validation"] }
chrono-tz = "0.10.4"
bytes = "1.10.1"
thiserror = "2.0.17"
rkyv = { version = "0.7.45", features = ["validation", "alloc", "std", "default"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "test-util", "signal"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
once_cell = "1.21.3"
strum_macros = "0.27.2"
serde = {version = "1.0.228", features = ["derive"]}
rust_decimal = { version = "1.38.0", features = ["default", "macros", "rkyv", "rkyv-safe"] }
ustr = "1.1.0"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
dashmap = "7.0.0-rc2"
futures-util = "0.3.28"
futures = "0.3.31"
log = "0.4.28"
reqwest = { version = "0.12.23"}
rust_decimal_macros = { version = "1.38.0" }
serde_json = "1.0.145"
lazy_static = "1.5.0"
rustls = { version = "0.23.20", default-features = false, features = ["ring"] }
crossbeam = "0.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time", "chrono", "rust_decimal"] }
[workspace.lints.rust]
missing_docs = "allow"
