[package]
name = "tt-database"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tt-types = {path = "../types"}
chrono = { workspace = true}
rust_decimal = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ahash = { workspace = true }
sqlx = { workspace = true }
rkyv = { workspace = true }

