[package]
name = "tt-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
# Database access now goes through Postgres via sqlx; tt-database may still provide models/paths
tt-database = {path = "../database"}
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
chrono = {workspace = true}
dotenvy = { workspace = true }
tt-types = { path = "../types" }
tt-bus = { path = "../bus" }
tt-shm = { path = "../shm" }
dashmap = { workspace = true }
rust_decimal = {workspace = true}
ahash = { workspace = true }
crossbeam = { workspace = true }
sqlx = { workspace = true }
smallvec = "1.15.1"

[[bin]]
name = "tt-engine-test_strategy"
path = "bin/data_test_strategy.rs"

[[bin]]
name = "tt-engine-total_live_test"
path = "bin/total_live_test.rs"
