[package]
name = "tt-providers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

provider = { path = "../provider", package = "tt-provider" }
tt-types = { path = "../types" }
tt-bus = { path = "../bus", features = ["server"] }
adapters-projectx = { package = "projectx", path = "../adapters/projectx" }
tt-shm = { path = "../shm" }
