[package]
name = "tt-providers"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
tt-types = { path = "../types" }
tt-bus = { path = "../bus", features = ["server"] }
projectx = { package = "tt-projectx", path = "../adapters/projectx" }
tt-shm = { path = "../shm" }
tt-database = {path = "../database", features = ["queries"]}
tokio = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rust_decimal = { workspace = true }
duckdb = {workspace = true}
dotenv =  {workspace = true}
