[package]
name = "tt-server"
version = "0.1.0"
edition.workspace = true


[dependencies]
projectx = { path = "../adapters/projectx" }
tt-types = { path = "../tt-types" }
tt-bus = {path = "../bus"}
provider = { path = "../provider", package = "tt-provider" }
ahash = { workspace = true }
anyhow = { workspace = true }
hdrhistogram = { version = "7", optional = true }
tokio-util = { workspace = true }
libc = "0.2"
async-stream = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dotenvy = "0.15.7"
tokio = { workspace = true }
ustr = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
zeroize = { workspace = true }
hmac = "0.12.1"
tracing = {workspace = true}
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }  # Needed for example binaries
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
rustls = { workspace = true }
bytes = { workspace = true }
# bench-only (optional normal dependency so feature-gated code compiles)



[dev-dependencies]
# only used for benches/tests locally; not pulled into release builds
criterion = "0.5"
tempfile = "3"
rand = "0.8"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
ahash = { workspace = true }