[package]
name = "tt-server"
version = "0.1.0"
edition.workspace = true


[dependencies]
tt-bus = {path = "../bus", features = ["server"]}
tt-providers = { path = "../providers" }
anyhow = { workspace = true }
libc = "0.2"
dotenvy = "0.15.7"
tokio = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = { workspace = true }



[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }