[package]
name = "tt-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tt-types = {path = "../types"}
tt-database = {path = "../database", features = ["queries"]}
tt-bus = {path = "../bus", features = ["server"]}
tt-providers = { path = "../providers" }
anyhow = { workspace = true }
libc = "0.2"
dotenvy = "0.15.7"
tokio = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = { workspace = true }
chrono = {workspace = true}



[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }