[package]
name = "tt-types"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true}
rust_decimal = { workspace = true }
serde = { workspace = true }
strum_macros = {workspace = true}
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
ustr = { workspace = true }
rkyv = { workspace = true}
nonzero = "0.2.0"
futures = "0.3.31"
tokio = { workspace = true }
dashmap = { workspace = true }
[features]
default = []

[dev-dependencies]
proptest = "1.8.0"
rstest = { workspace = true }
