[package]
name = "tt-types"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true}
chrono-tz = {workspace = true}
rust_decimal = { workspace = true }
serde = { workspace = true }
strum_macros = {workspace = true}
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
rkyv = { workspace = true}
futures = {workspace = true}
tokio = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
lazy_static = {workspace = true}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
[features]
default = []

[dev-dependencies]
