[package]
name = "tt-types"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true}
chrono = { workspace = true}
chrono-tz = {workspace = true}
dotenvy = {workspace = true}
rust_decimal = { workspace = true }
serde = { workspace = true }
strum_macros = {workspace = true}
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
futures = {workspace = true}
tokio = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
lazy_static = {workspace = true}
uuid = { version = "1.18.1", features = ["v4", "serde"] }
bincode = { version = "1.3.1" }
[features]
default = []

[dev-dependencies]
