[package]
name = "projectx"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[lib]
name = "projectx"

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dotenvy = "0.15.7"
tokio = { workspace = true }
ustr = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
zeroize = { workspace = true }
hmac = "0.12.1"
tracing = {workspace = true}
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }  # Needed for example binaries
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }



[[bin]]
name = "projectx-http"
path = "bin/http.rs"

[[bin]]
name = "projectx-data"
path = "bin/data.rs"


