[package]
name = "tt-projectx"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[lib]
name = "projectx"

[features]
server = []

[dependencies]
tt-types = { path = "../../types" }
tt-provider = {path = "../../provider"}
tt-bus = { path = "../../bus", features = ["server"] }
tt-shm = { path = "../../shm" }
rkyv = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
dotenvy = "0.15.7"
tokio = { workspace = true }
ustr = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = {workspace = true}
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }  # Needed for example binaries
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
rustls = { workspace = true }
http = "1.3.1"



[[bin]]
name = "projectx-http"
path = "bin/http.rs"
required-features = ["server"]

[[bin]]
name = "projectx-data"
path = "bin/data.rs"
required-features = ["server"]


