[package]
name = "data_test_strategy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tt-database = {path = "../../../database", features = ["queries"]}
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = {workspace = true}
dotenvy = { workspace = true }
tt-types = { path = "../../../types" }
tt-bus = { path = "../../../bus" }
tt_engine = { package = "tt-engine", path = "../../../engine" }
tt-shm = { path = "../../../shm" }
dashmap = { workspace = true }
duckdb = {workspace = true}
rust_decimal = {workspace = true}
ahash = { workspace = true }
crossbeam = { workspace = true }
