[package]
name = "data_test_strategy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tt-types = { path = "../../../../types" }
tt-bus = { path = "../../../../bus" }
tt_engine = { package = "tt-engine", path = "../../../../engine" }
colored = {workspace = true}