[package]
name = "live_orders"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
anyhow = {workspace = true}
tracing-subscriber = {workspace = true}
colored = {workspace = true}
tt-types = { path = "../../../../types" }
tt-bus = { path = "../../../../bus" }
tt_engine = { package = "tt-engine", path = "../../../../engine" }
tt_database = {package = "tt-database", path = "../../../../database"}
dotenvy = { workspace = true }
rust_decimal = {workspace = true}


[lints]
workspace = true
